# flow_project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  flow-matching-lab01.ipynb  flow-matching-lab01.py  flow-matching-lab02.py  pyproject.toml  pyrightconfig.json
.claude/: settings.json  settings.local.json
.claude/skills/gen-test/: SKILL.md
.claude/skills/new-lab/: SKILL.md
__marimo__/: flow-matching-lab02.ipynb
src/: plotting.py
src/flow/: diffusion.py  distributions.py  flows.py  plot.py  sde.py  simulator.py
src/flow/types/: diffusion.py  ode.py  probability.py
src/flow_matching/: __init__.py  distributions.py  flows.py  models.py  paths.py  plot.py  sde.py  simulator.py  trainer.py
src/flow_matching/base/: __init__.py  dynamics.py  paths.py  probability.py  simulator.py  trainer.py
src/types/: ode.py  simulator.py
