[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flow-project"
version = "0.1.0"
description = "Flow matching project practice"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pip>=26.0.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
