[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flow"
version = "0.1.0"
description = "Flow matching project practice"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pip>=26.0.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["src/flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "snakeviz>=2.2.2",
]
